syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "sample.grpc";
option java_outer_classname = "SampleProto";

package sample;

service SampleService {
  rpc Exec(SampleRequest) returns (SampleResponse) {}
}

message SampleRequest {
  string name = 1;
}

message SampleResponse {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}
